fixing size of gratitude images on mobile

--- a/styles.css
+++ b/styles.css
@@ -135,6 +135,9 @@ body{
     animation: rotateImage 120s linear infinite; /
 }
 
+.image-container img {
+    width: 35%;
+}
 /* Style for the image */
 #gratitudeImage {
         /*max-width: 100%;
@@ -375,9 +378,9 @@ body{
     }
 
     .static-svg-small {
-        top: 50px;
+        top: 20%;
         width: 100%; /* Adjust the width as needed for smaller screens */
-        height: auto; /* Maintain aspect ratio */
+        height: 50%; /* Maintain aspect ratio */
     }
 
     .card {
@@ -401,6 +404,10 @@ body{
 
     }
 
+    .image-container img {
+        width: 220%;
+    }
+
 .gratitudeImage {
     width: 50%;
     height: auto; 
@@ -414,10 +421,11 @@ body{
 
     .card {
         /* position: -webkit-sticky; /* Safari */
-        position: relative;
-        top: 500px;
+        position: fixed;
         bottom: 0;
         left: 0;
+        right: 0;
+        height: 40%;
         /* align-self: flex-end; */
         padding: 16px;
         width: 100%;
@@ -452,7 +460,8 @@ body{
     }
 
     .entries {
-        flex: 1;
+        max-height: 60%; 
+        /*flex: 1;*/
         overflow-y: auto;
         padding: 10px;
     }
